--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
     "cors": "^2.8.5",
     "gh-pages": "^3.2.3",
     "moment": "^2.29.3",
-    "react": "^18.1.0",
+    "plyr-react": "^5.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.1",
     "react-iframe": "^1.8.0",
     "react-redux": "^8.0.1",
@@ -25,6 +26,7 @@
     "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.0",
+    "react-video-js-player": "^1.1.1",
     "redux": "^4.2.0",
     "sass": "^1.51.0",
     "slick-carousel": "^1.8.1",
