--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "slugify": "^1.6.5"
   },
   "main": "app.js",
   "keywords": [],
