--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,15 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
     "cors": "^2.8.5",
+    "gapi-script": "^1.2.0",
     "gh-pages": "^3.2.3",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "plyr-react": "^5.0.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-hls-player": "^3.0.7",
     "react-hook-form": "^7.32.1",
     "react-iframe": "^1.8.0",
     "react-redux": "^8.0.1",
